# VI_P2

./: DavidG_PauA_streamlit_site.py  Untitled.tldr  chart.html  david.ipynb  environment.yml  full_requirements.txt  graphs copy.py  graphs.py  graphs_david.py  new-york-city-boroughs.geojson  p1_graphs.py  pau.ipynb  pyproject.toml  readme.md  report.ipynb  requirements.txt  resources.md  test.py  test_streamlit.py  tests.ipynb  weather.csv  weather2018.csv
.ipynb_checkpoints/: pau-checkpoint.ipynb  tests-checkpoint.ipynb
Submission/: DavidG_PauA_streamlit_site.py  README.md  clean_data.csv  graphs.py  visualization.html
Submission/pages/: html version.py
pages/: html version.py  instructions.py
