[tool.poetry]
name = "vi-p2"
version = "0.1.0"
description = "Information Visualization project, NY traffic accident visualization"
authors = ["David Gallardo, Pau Amargant"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.4"
altair = "^5.2.0"
streamlit = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
